https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll https://github.com/Huxpro/huxpro.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 天才宝宝
 #SEOTitle:
 header-img: img/home-bg.jpg
 #email: 10000@qq.com
-description: "搞着玩"
+description: "一天为码农，一生为码农..."
 keyword: ""
 #url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
