https://github.com/BlackrockDigital/startbootstrap-clean-blog-jekyll https://github.com/Huxpro/huxpro.github.io

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 天才宝宝
-#SEOTitle:
+SEOTitle: "wuspace"
 header-img: img/home-bg.jpg
 #email: 10000@qq.com
 description: "搞着玩的博客"
