--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: 天才宝宝
 SEOTitle: "wuspace"
 header-img: img/home-bg.jpg
 #email: 10000@qq.com
-description: "搞着玩的博客"
+description: "天才宝宝的博客"
 keyword: ""
 #url: "https://huangxuan.me"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
@@ -70,7 +70,7 @@ duoshuo_share: false                    # set to false if you want to use Commen
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "写写代码，做做设计，<br>离开世界之前，一切都是过程"
+sidebar-about-description: "不吹牛逼，就是干..."
 sidebar-avatar: /img/avatar-master.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
