--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 天才宝宝
-SEOTitle: "wuspace"
+SEOTitle: "天才宝宝"
 header-img: img/home-bg.jpg
 #email: 10000@qq.com
 description: "天才宝宝的博客"
