--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ safe: false
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 寂寞先生
+title : 天才宝宝
 tagline: Site Tagline
 author :
-  name : 陈佳伟
-  email : blah@email.test
+  name : chao
+  email : chao@gmx.com
   github : username
   twitter : username
   feedburner : feedname
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://www.wuspace.net
+production_url : http://wu-chao.github.io
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
