--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : http://wu-chao.github.io
+production_url : https://www.wuspace.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
