--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,17 @@
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
-permalink: /:year/:month/:day/:title 
-markdown: rdiscount
-exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
-#mardown: redcarpet
+permalink: /:categories/:year/:month/:day/:title 
 
-safe: false
+exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
+pygments: true
+
 # Themes are encouraged to use these universal variables 
 # so be sure to set them if your theme uses them.
 #
-title : 天才宝宝
+title : Jekyll Bootstrap
 tagline: Site Tagline
 author :
-  name : chao
+  name : 天才宝宝
   email : chao@gmx.com
   github : username
   twitter : username
@@ -27,7 +25,7 @@ author :
 # Else if you are pushing to username.github.io, replace with your username.
 # Finally if you are pushing to a GitHub project page, include the project name at the end.
 #
-production_url : https://www.wuspace.net
+production_url : http://wuspace.net
 
 # All Jekyll-Bootstrap specific configurations are namespaced into this hash
 #
@@ -56,7 +54,6 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-
   BASE_PATH : false
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
@@ -103,7 +100,7 @@ JB :
   analytics :
     provider : google 
     google : 
-        tracking_id : 'UA-50637568-1'
+        tracking_id : 'UA-123-12'
     getclicky :
       site_id : 
     mixpanel :
