--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,8 @@ author :
   github : username
   twitter : username
   feedburner : feedname
+theme :
+  name : twitter
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
@@ -56,7 +58,7 @@ JB :
   #   - Only the following values are falsy: ["", null, false]
   #   - When setting BASE_PATH it must be a valid url.
   #     This means always setting the protocol (http|https) or prefixing with "/"
-  BASE_PATH : /
+  BASE_PATH : false
 
   # By default, the asset_path is automatically defined relative to BASE_PATH plus the enabled theme.
   # ex: [BASE_PATH]/assets/themes/[THEME-NAME]
