--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # This is the default format. 
 # For more see: http://jekyllrb.com/docs/permalinks/
 permalink: /:year/:month/:day/:title 
-markdown: rdiscount
 exclude: [".rvmrc", ".rbenv-version", "README.md", "Rakefile", "changelog.md"]
-highlighter: pygments
-#mardown: redcarpet
+highlighter: rouge
+mardown: redcarpet
 
 safe: false
 # Themes are encouraged to use these universal variables 
